<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".ui.insight.InsightFragment">

    <TextView
        android:id="@+id/tv_total_entries"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/abeezee"
        android:gravity="center"
        android:text="@string/total_entries"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_days_application"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_total_entries_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/insight"
        android:gravity="center"
        android:padding="20dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_total_entries"
        app:layout_constraintStart_toStartOf="@+id/tv_total_entries"
        app:layout_constraintTop_toBottomOf="@+id/tv_total_entries" />

    <TextView
        android:id="@+id/tv_days_application"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/abeezee"
        android:gravity="center"
        android:text="@string/days_application"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_total_entries"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_total_entries"
        app:layout_constraintTop_toTopOf="@+id/tv_total_entries" />

    <TextView
        android:id="@+id/tv_days_application_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/insight"
        android:gravity="center"
        android:padding="20dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_total_entries_result"
        app:layout_constraintEnd_toEndOf="@+id/tv_days_application"
        app:layout_constraintStart_toStartOf="@+id/tv_days_application"
        app:layout_constraintTop_toTopOf="@+id/tv_total_entries_result" />

    <TextView
        android:id="@+id/tv_percentage_emotion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/percentage_emotions"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/tv_total_entries_result"
        app:layout_constraintTop_toBottomOf="@+id/tv_total_entries_result" />

    <ImageView
        android:id="@+id/iv_feeling_4"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/contento"
        app:layout_constraintEnd_toEndOf="@+id/iv_feeling_5"
        app:layout_constraintStart_toStartOf="@+id/iv_feeling_5"
        app:layout_constraintTop_toBottomOf="@+id/iv_feeling_5" />

    <ImageView
        android:id="@+id/iv_feeling_3"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/indiferente"
        app:layout_constraintEnd_toEndOf="@+id/iv_feeling_4"
        app:layout_constraintStart_toStartOf="@+id/iv_feeling_4"
        app:layout_constraintTop_toBottomOf="@+id/iv_feeling_4" />

    <ImageView
        android:id="@+id/iv_feeling_1"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/llorando"
        app:layout_constraintEnd_toEndOf="@+id/iv_feeling_2"
        app:layout_constraintStart_toStartOf="@+id/iv_feeling_2"
        app:layout_constraintTop_toBottomOf="@+id/iv_feeling_2" />

    <ImageView
        android:id="@+id/iv_feeling_5"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/muy_contento"
        app:layout_constraintStart_toStartOf="@+id/tv_percentage_emotion"
        app:layout_constraintTop_toBottomOf="@+id/tv_percentage_emotion" />

    <ImageView
        android:id="@+id/iv_feeling_2"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/triste"
        app:layout_constraintEnd_toEndOf="@+id/iv_feeling_3"
        app:layout_constraintStart_toStartOf="@+id/iv_feeling_3"
        app:layout_constraintTop_toBottomOf="@+id/iv_feeling_3" />

    <TextView
        android:id="@+id/tv_feeling2_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_feeling_2"
        app:layout_constraintStart_toEndOf="@+id/iv_feeling_2"
        app:layout_constraintTop_toTopOf="@+id/iv_feeling_2" />

    <TextView
        android:id="@+id/tv_feeling1_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_feeling_1"
        app:layout_constraintStart_toEndOf="@+id/iv_feeling_1"
        app:layout_constraintTop_toTopOf="@+id/iv_feeling_1" />

    <TextView
        android:id="@+id/tv_feeling3_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_feeling_3"
        app:layout_constraintStart_toEndOf="@+id/iv_feeling_3"
        app:layout_constraintTop_toTopOf="@+id/iv_feeling_3" />

    <TextView
        android:id="@+id/tv_feeling4_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_feeling_4"
        app:layout_constraintStart_toEndOf="@+id/iv_feeling_4"
        app:layout_constraintTop_toTopOf="@+id/iv_feeling_4" />

    <TextView
        android:id="@+id/tv_feeling5_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/iv_feeling_4"
        app:layout_constraintStart_toEndOf="@+id/iv_feeling_5"
        app:layout_constraintTop_toBottomOf="@+id/tv_percentage_emotion" />
</androidx.constraintlayout.widget.ConstraintLayout>



